infraestructure_article/code/3_vpc_multiOF.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'vpc.yml Contains 2 Public Segments and 2 Private Segments'

Parameters:
  VpcBlock:
    Type: String
    Default: 20.0.0.0/16
    Description: The CIDR range for the VPC. This should be a valid private (RFC 1918) CIDR range.

  PublicSubnet01Block:
    Type: String
    Default: 20.0.1.0/24
    Description: CidrBlock for public subnet 01 within the VPC

  PrivateSubnet01Block:
    Type: String
    Default: 20.0.2.0/24
    Description: CidrBlock for private subnet 01 within the VPC

  AmiWebserverID:
    Type: String
    Default: ami-0182f373e66f89c85
    Description: AMI ID, search it on your region, default us-east-1

  StackPersistence:
    Type: String
    Default: maestria
    Description: Stack where we need resources

  RepoSSHURL:
    Type: String
    Default: git@github.com:bpdarlyn/big_data_html.git
    Description: Url where clone the project for web servers

  PeerVpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID for Office01

  PeerVpcBlock:
    Type: String
    Default: 10.0.0.0/16
    Description: 10.0.0.0/16

  PublicRouteTableIdOF01:
    Type: String
    Description: Public Route Table OF01

  PrivateRouteTableIdOF01:
    Type: String
    Description: Private Route Table OF01


Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "Worker Network Configuration"
        Parameters:
          - VpcBlock
          - PublicSubnet01Block
          - PrivateSubnet01Block
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:  !Ref VpcBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-VPC'

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"

  VPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub 'Public Subnets ${AWS::StackName}'

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub 'Private Subnets ${AWS::StackName}'

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Public Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PublicSubnet01Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}-PublicSubnet"

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet 01
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '1'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PrivateSubnet01Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}-PrivateSubnet"

  PublicSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

  NatGatewayEIP:
    DependsOn:
      - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  NatGateway:
    DependsOn:
      - NatGatewayEIP
      - PublicSubnet
      - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP.AllocationId'
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-NatGatewayAZ1'

  PrivateRoute:
    DependsOn:
      - VPCGatewayAttachment
      - NatGateway
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PublicRoute:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  VPCPeeringConnection:
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      VpcId: !Ref VPC
      PeerVpcId: !Ref PeerVpcId
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Peering-To-Oficina01"

  PeeringRouteToOficina01Public:
    DependsOn:
      - VPCPeeringConnection
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: !Ref PeerVpcBlock
      VpcPeeringConnectionId: !Ref VPCPeeringConnection

  PeeringPrivateRouteToOficina01:
    DependsOn:
      - VPCPeeringConnection
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: !Ref PeerVpcBlock
      VpcPeeringConnectionId: !Ref VPCPeeringConnection

  PeeringRouteFromOficina01Public:
    DependsOn:
      - VPCPeeringConnection
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTableIdOF01
      DestinationCidrBlock: !Ref VpcBlock
      VpcPeeringConnectionId: !Ref VPCPeeringConnection

  PeeringPrivateFromRouteOficina01:
    DependsOn:
      - VPCPeeringConnection
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableIdOF01
      DestinationCidrBlock: !Ref VpcBlock
      VpcPeeringConnectionId: !Ref VPCPeeringConnection

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow traffic"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: "icmp"
          FromPort: -1
          ToPort: -1
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  EC2AccessRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: EC2S3WritePolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - s3:*
                Resource: !Sub "arn:aws:s3:::${StackPersistence}-persistence-resources/*"
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2AccessRole
  Webserver1:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Sub "${StackPersistence}-PublicAccess"
      InstanceType: t2.micro
      IamInstanceProfile: !Ref EC2InstanceProfile
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      SubnetId: !Ref PublicSubnet
      ImageId: !Ref AmiWebserverID
      UserData:
        Fn::Base64:
          !Sub |
          #!/bin/bash
          sudo yum update -y
          sudo yum install -y nginx git
          sudo systemctl enable nginx
          sudo systemctl start nginx
          aws s3 cp s3://${StackPersistence}-persistence-resources/id_rsa ~/.ssh/id_rsa
          chmod 600 ~/.ssh/id_rsa
          aws s3 cp s3://${StackPersistence}-persistence-resources/known_hosts ~/.ssh/known_hosts

          TARGET_DIRECTORY="/usr/share/nginx/html"
          TEMP_DIRECTORY="/tmp/repo_clone"

          sudo rm -rf "$TEMP_DIRECTORY"

          git clone "${RepoSSHURL}" "$TEMP_DIRECTORY"
          sudo cp -R "$TEMP_DIRECTORY/." "$TARGET_DIRECTORY"

          sudo systemctl restart nginx
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-ws1"
  Webserver2:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Sub "${StackPersistence}-PublicAccess"
      InstanceType: t2.micro
      IamInstanceProfile: !Ref EC2InstanceProfile
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      SubnetId: !Ref PublicSubnet
      ImageId: !Ref AmiWebserverID
      UserData:
        Fn::Base64:
          !Sub |
          #!/bin/bash
          sudo yum update -y
          sudo yum install -y nginx git
          sudo systemctl enable nginx
          sudo systemctl start nginx
          aws s3 cp s3://${StackPersistence}-persistence-resources/id_rsa ~/.ssh/id_rsa
          chmod 600 ~/.ssh/id_rsa
          aws s3 cp s3://${StackPersistence}-persistence-resources/known_hosts ~/.ssh/known_hosts

          TARGET_DIRECTORY="/usr/share/nginx/html"
          TEMP_DIRECTORY="/tmp/repo_clone"

          sudo rm -rf "$TEMP_DIRECTORY"

          git clone "${RepoSSHURL}" "$TEMP_DIRECTORY"
          sudo cp -R "$TEMP_DIRECTORY/." "$TARGET_DIRECTORY"

          sudo systemctl restart nginx
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-ws2"
  Webserver3:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Sub "${StackPersistence}-PublicAccess"
      InstanceType: t2.micro
      IamInstanceProfile: !Ref EC2InstanceProfile
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      SubnetId: !Ref PrivateSubnet
      ImageId: !Ref AmiWebserverID
      UserData:
        Fn::Base64:
          !Sub |
          #!/bin/bash
          sudo yum update -y
          sudo yum install -y nginx git
          sudo systemctl enable nginx
          sudo systemctl start nginx
          aws s3 cp s3://${StackPersistence}-persistence-resources/id_rsa ~/.ssh/id_rsa
          chmod 600 ~/.ssh/id_rsa
          aws s3 cp s3://${StackPersistence}-persistence-resources/known_hosts ~/.ssh/known_hosts

          TARGET_DIRECTORY="/usr/share/nginx/html"
          TEMP_DIRECTORY="/tmp/repo_clone"

          sudo rm -rf "$TEMP_DIRECTORY"

          git clone "${RepoSSHURL}" "$TEMP_DIRECTORY"
          sudo cp -R "$TEMP_DIRECTORY/." "$TARGET_DIRECTORY"

          sudo systemctl restart nginx
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-ws3"
  Webserver4:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Sub "${StackPersistence}-PublicAccess"
      InstanceType: t2.micro
      IamInstanceProfile: !Ref EC2InstanceProfile
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      SubnetId: !Ref PrivateSubnet
      ImageId: !Ref AmiWebserverID
      UserData:
        Fn::Base64:
          !Sub |
          #!/bin/bash
          sudo yum update -y
          sudo yum install -y nginx git
          sudo systemctl enable nginx
          sudo systemctl start nginx
          aws s3 cp s3://${StackPersistence}-persistence-resources/id_rsa ~/.ssh/id_rsa
          chmod 600 ~/.ssh/id_rsa
          aws s3 cp s3://${StackPersistence}-persistence-resources/known_hosts ~/.ssh/known_hosts

          TARGET_DIRECTORY="/usr/share/nginx/html"
          TEMP_DIRECTORY="/tmp/repo_clone"

          sudo rm -rf "$TEMP_DIRECTORY"

          git clone "${RepoSSHURL}" "$TEMP_DIRECTORY"
          sudo cp -R "$TEMP_DIRECTORY/." "$TARGET_DIRECTORY"

          sudo systemctl restart nginx
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-ws4"
  LambdaExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: LambdaVPCEndpointPolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ec2:*
                Resource: "*"
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: "*"
  # Lambda Function for Custom Resource
#  VPCEndpointLambda:
#    Type: AWS::Lambda::Function
#    Properties:
#      FunctionName: "CreateDeleteEC2InstanceConnectEndpoint"
#      Handler: "index.handler"
#      Runtime: python3.9
#      Role: !GetAtt LambdaExecutionRole.Arn
#      Timeout: 300
#      Code:
#        ZipFile: |
#          import json
#          import boto3
#          import cfnresponse
#
#          ec2 = boto3.client('ec2')
#
#          def handler(event, context):
#              print('GOT EVENT', event)
#              responseData = {}
#              try:
#                  if event['RequestType'] == 'Create':
#                      # Create EC2 Instance Connect Endpoint
#                      subnet_id = event['ResourceProperties']['SubnetId']
#                      sg_ids = event['ResourceProperties']['SGIds']
#                      tag_specifications = event['ResourceProperties']['TagSpecifications']
#                      response = ec2.create_instance_connect_endpoint(
#                          SecurityGroupIds=sg_ids,
#                          SubnetId=subnet_id,
#                          TagSpecifications=tag_specifications
#                      )
#                      responseData['InstanceConnectEndpointId'] = response['InstanceConnectEndpoint']['InstanceConnectEndpointId']
#                      physicalResourceId = responseData['InstanceConnectEndpointId']
#                      cfnresponse.send(event, context, cfnresponse.SUCCESS, responseData, physicalResourceId)
#
#                  elif event['RequestType'] == 'Delete':
#                      # Delete EC2 Instance Connect Endpoint
#                      instance_connect_id = event['PhysicalResourceId']
#                      ec2.delete_instance_connect_endpoint(
#                          InstanceConnectEndpointId=instance_connect_id
#                      )
#                      cfnresponse.send(event, context, cfnresponse.SUCCESS, {})
#
#                  elif event['RequestType'] == 'Update':
#                      # Handle updates (if necessary)
#                      cfnresponse.send(event, context, cfnresponse.SUCCESS, responseData)
#
#              except Exception as e:
#                  print(e)
#                  cfnresponse.send(event, context, cfnresponse.FAILED, responseData)

  # Custom Resource invoking the Lambda function
#  CreateDeleteEC2InstanceConnectEndpoint:
#    Type: Custom::EC2InstanceConnectEndpoint
#    Properties:
#      ServiceToken: !GetAtt VPCEndpointLambda.Arn
#      SubnetId: !Ref PrivateSubnet
#      SGIds:
#        - !Ref InstanceSecurityGroup
#      TagSpecifications:
#        - ResourceType: instance-connect-endpoint
#          Tags:
#            - Key: "Name"
#              Value: !Sub "${AWS::StackName}-ConnectEndpoint"

Outputs:

  SubnetIds:
    Description: Subnets IDs in the VPC
    Value: !Join [ ",", [ !Ref PublicSubnet, !Ref PrivateSubnet ] ]

  VpcId:
    Description: The VPC Id
    Value: !Ref VPC
